--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "d3": "^7.8.2",
     "tailwindcss": "^3.2.7",
+    "tippy.js": "^6.3.7",
     "webpack": "^5.75.0"
   },
   "devDependencies": {
