--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && webpack && tailwindcss -i ./src/styles.css -o ./dist/styles.css && mkdir dist/assets && cp -r src/assets dist"
+    "build": "rm -rf dist && webpack && tailwindcss -i ./src/styles.css -o ./dist/styles.css && mkdir dist/assets && cp -r src/assets dist && cp index.html dist"
   },
   "author": "",
   "license": "ISC",
